# TelloPy

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py  tello-client.sh  test_xbox.py
files/: release-how-to.txt
h264decoder/: .gitignore  CMakeLists.txt  h264decoder.cpp  h264decoder.py  h264decoder_perf.py  h264decoder_test1.cpp  h264decoder_threading.py
tellopy/: __init__.py
tellopy/_internal/: crc.py  dispatcher.py  error.py  event.py  logger.py  protocol.py  state.py  tello.py  utils.py  video_stream.py
tellopy/examples/: joystick_and_video.py  keyboard_and_video.py  record_log.py  simple_takeoff.py  telloCV.py  tracker.py  video_effect.py
test/: test.bash  wait_wifi_connection.bash
tests/: keep_connection.bash  test.py
tests/tello_qt/: mainwindow.ui  setup.py  tello_qt.py  thread_qt.py  wifi.icns  wifi.py
